--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name=msv-gestion-evaluacion-docente
 server.port=8091
-spring.datasource.url=jdbc:mysql://docker.unicauca.edu.co:3307/computacion
-#spring.datasource.url=jdbc:mysql://localhost:3306/maestriacomputacion
-#spring.datasource.username=root
-#spring.datasource.password=mysql
+# spring.datasource.url=jdbc:mysql://docker.unicauca.edu.co:3307/computacion
+# spring.datasource.username=computacion
+# spring.datasource.password=DB-C0mput4c10N
+spring.datasource.url=jdbc:mysql://localhost:3306/maestria_test
+spring.datasource.username=root
+spring.datasource.password=123456789
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # spring.main.allow-circular-references=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.hibernate.ddl-auto=update
